<resources>
    <string name="app_name">Tipster</string>
    <string name="txtLbl1">Valor Total</string>
    <string name="txtLbl2">Número de pessoas</string>
    <string name="txtLbl3">Porcentagem da gorjeta</string>

    <string name="op1" translatable="false">10%</string>
    <string name="op2" translatable="false">15%</string>
    <string name="op3" translatable="false">20%</string>
    <string name="op4">Outro</string>

    <string name="btnCalculate">Calcular</string>
    <string name="btnReset">Limpar</string>

    <string name="txtResult">Resultados</string>

    <string name="txtTipAmount">Total de gorjeta</string>
    <string name="txtTotalToPay">Total à pagar</string>
    <string name="txtTipPerPerson">Quanto por pessoa</string>

    <string name="back">Voltar</string>
</resources>
